--- a/docs/professor/caroline_domingues_porto_do_nascimento_barbieri.mdx
+++ b/docs/professor/caroline_domingues_porto_do_nascimento_barbieri.mdx
@@ -8,6 +8,19 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
+          subject: "Projeto Integrador II",
+          size: 2,
+          teachers: [
+            "Caroline Domingues Porto do Nascimento Barbieri"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "IIW2023A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "Fundamentos de informática",
           size: 1,
           teachers: [
@@ -30,7 +43,7 @@ export const data = {
           students: [
             "IIW2024A - Grupo B"
           ],
-          time: "10:15 - 11:05",
+          time: "13:10 - 14:00",
           color: ""
         },
         {
@@ -42,19 +55,6 @@ export const data = {
           classroom: "Laboratório de Informatica A",
           students: [
             "IIW2024A - Grupo A"
-          ],
-          time: "13:10 - 14:00",
-          color: ""
-        },
-        {
-          subject: "Projeto Integrador II",
-          size: 2,
-          teachers: [
-            "Caroline Domingues Porto do Nascimento Barbieri"
-          ],
-          classroom: "Laboratório de Computação Aplicada",
-          students: [
-            "IIW2023A"
           ],
           time: "15:05 - 15:55",
           color: ""
@@ -98,12 +98,7 @@ export const data = {
           ],
           time: "07:30 - 08:20",
           color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
+        },
         {
           subject: "Fundamentos de informática",
           size: 1,
@@ -118,6 +113,10 @@ export const data = {
           color: ""
         }
       ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: []
     }
   ],
   time: [
