--- a/docs/professor/daniele_de_almeida_paula.mdx
+++ b/docs/professor/daniele_de_almeida_paula.mdx
@@ -68,6 +68,19 @@ export const data = {
           ],
           time: "19:00 - 19:50",
           color: ""
+        },
+        {
+          subject: "Microbiologia dos Alimentos",
+          size: 2,
+          teachers: [
+            "Daniele de Almeida Paula"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "TAL2024"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
         }
       ]
     },
@@ -104,21 +117,7 @@ export const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Microbiologia dos Alimentos",
-          size: 2,
-          teachers: [
-            "Daniele de Almeida Paula"
-          ],
-          classroom: "Sala 16-2",
-          students: [
-            "TAL2024"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     }
   ],
   time: [
