--- a/docs/professor/leandro_luiz_borges.mdx
+++ b/docs/professor/leandro_luiz_borges.mdx
@@ -43,19 +43,6 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Biologia III",
-          size: 2,
-          teachers: [
-            "Leandro Luiz Borges"
-          ],
-          classroom: "Sala 03 - CR Toledo",
-          students: [
-            "IIW2022B"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        },
-        {
           subject: "Prática profissional (estágio obrigatório) e escrita de relatório",
           size: 2,
           teachers: [
@@ -73,6 +60,32 @@ export const data = {
     {
       dayName: "Quinta-Feira",
       dayClasses: [
+        {
+          subject: "Biologia II",
+          size: 2,
+          teachers: [
+            "Leandro Luiz Borges"
+          ],
+          classroom: "Sala 02 - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Biologia III",
+          size: 2,
+          teachers: [
+            "Leandro Luiz Borges"
+          ],
+          classroom: "Sala 03 - CR Toledo",
+          students: [
+            "IIW2022B"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
         {
           subject: "Prática profissional (estágio obrigatório) e escrita de relatório",
           size: 1,
