--- a/docs/professor/octavio_henrique_viana.mdx
+++ b/docs/professor/octavio_henrique_viana.mdx
@@ -26,7 +26,7 @@ export const data = {
           teachers: [
             "Octavio Henrique Viana"
           ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
+          classroom: "Laboratório de Informatica C",
           students: [
             "AGO2024 - Grupo A"
           ],
