--- a/docs/professor/rafael_luis_bartz.mdx
+++ b/docs/professor/rafael_luis_bartz.mdx
@@ -8,6 +8,19 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
+          subject: "Desenvolvimento WEB Orientado a Objetos",
+          size: 2,
+          teachers: [
+            "Rafael Luis Bartz"
+          ],
+          classroom: "Laboratório de Informatica A - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
+        {
           subject: "Lógica de programação",
           size: 2,
           teachers: [
@@ -25,21 +38,7 @@ export const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Desenvolvimento WEB Orientado a Objetos",
-          size: 2,
-          teachers: [
-            "Rafael Luis Bartz"
-          ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "13:10 - 14:00",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
