--- a/docs/professor/roberto_haruyoshi_ito.mdx
+++ b/docs/professor/roberto_haruyoshi_ito.mdx
@@ -25,6 +25,19 @@ export const data = {
           color: ""
         },
         {
+          subject: "Meteorologia e Bioclimatologia na Agropecuária",
+          size: 2,
+          teachers: [
+            "Roberto Haruyoshi Ito"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
+        {
           subject: "Piscicultura e Apicultura",
           size: 4,
           teachers: [
@@ -41,21 +54,7 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Meteorologia e Bioclimatologia na Agropecuária",
-          size: 2,
-          teachers: [
-            "Roberto Haruyoshi Ito"
-          ],
-          classroom: "Sala 6-2",
-          students: [
-            "AGO2023"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
