--- a/docs/professor/sonia_maria_mandotti.mdx
+++ b/docs/professor/sonia_maria_mandotti.mdx
@@ -44,7 +44,7 @@ export const data = {
         },
         {
           subject: "Culturas I",
-          size: 4,
+          size: 2,
           teachers: [
             "Sônia Maria Mandotti"
           ],
@@ -53,6 +53,19 @@ export const data = {
             "AGR2024"
           ],
           time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Culturas I",
+          size: 2,
+          teachers: [
+            "Sônia Maria Mandotti"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGR2024"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
