--- a/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
@@ -37,6 +37,19 @@ export const data = {
           color: ""
         },
         {
+          subject: "Informática instrumental e aplicada",
+          size: 2,
+          teachers: [
+            "Samuel Stephan Milczuk"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "AGO2024 - Grupo B"
+          ],
+          time: "15:05 - 15:55",
+          color: ""
+        },
+        {
           subject: "Design de loja, visual merchandising e franchising",
           size: 2,
           teachers: [
