--- a/docs/sala/bloco_2/sala_6-2.mdx
+++ b/docs/sala/bloco_2/sala_6-2.mdx
@@ -20,20 +20,7 @@ export const data = {
           students: [
             "AGO2023"
           ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Artes II",
-          size: 1,
-          teachers: [
-            "Josiane Paula Maltauro"
-          ],
-          classroom: "Sala 6-2",
-          students: [
-            "AGO2023"
-          ],
-          time: "09:25 - 10:15",
+          time: "08:20 - 09:10",
           color: ""
         },
         {
@@ -50,19 +37,6 @@ export const data = {
           color: ""
         },
         {
-          subject: "Cultura e Cinema Nacional II",
-          size: 1,
-          teachers: [
-            "Josiane Paula Maltauro"
-          ],
-          classroom: "Sala 6-2",
-          students: [
-            "AGO2023"
-          ],
-          time: "13:10 - 14:00",
-          color: ""
-        },
-        {
           subject: "Matemática II",
           size: 2,
           teachers: [
@@ -72,7 +46,20 @@ export const data = {
           students: [
             "AGO2023"
           ],
-          time: "14:00 - 14:50",
+          time: "13:10 - 14:00",
+          color: ""
+        },
+        {
+          subject: "Cultura e Cinema Nacional II",
+          size: 1,
+          teachers: [
+            "Josiane Paula Maltauro"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "15:05 - 15:55",
           color: ""
         }
       ]
@@ -107,10 +94,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Sistemas Agroflorestais",
+          subject: "Meteorologia e Bioclimatologia na Agropecuária",
           size: 2,
           teachers: [
-            "Elias Franco"
+            "Roberto Haruyoshi Ito"
           ],
           classroom: "Sala 6-2",
           students: [
@@ -164,10 +151,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Meteorologia e Bioclimatologia na Agropecuária",
+          subject: "Sistemas Agroflorestais",
           size: 2,
           teachers: [
-            "Roberto Haruyoshi Ito"
+            "Elias Franco"
           ],
           classroom: "Sala 6-2",
           students: [
@@ -177,8 +164,21 @@ export const data = {
           color: ""
         },
         {
+          subject: "Artes II",
+          size: 1,
+          teachers: [
+            "Josiane Paula Maltauro"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "14:00 - 14:50",
+          color: ""
+        },
+        {
           subject: "Culturas I",
-          size: 4,
+          size: 2,
           teachers: [
             "Sônia Maria Mandotti"
           ],
@@ -187,6 +187,19 @@ export const data = {
             "AGR2024"
           ],
           time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Culturas I",
+          size: 2,
+          teachers: [
+            "Sônia Maria Mandotti"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGR2024"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
@@ -274,12 +287,12 @@ export const data = {
           students: [
             "AGO2023"
           ],
-          time: "13:10 - 14:00",
+          time: "15:05 - 15:55",
           color: ""
         },
         {
           subject: "Fertilidade, Manejo e Conservação dos Solos",
-          size: 4,
+          size: 2,
           teachers: [
             "Elias Franco"
           ],
@@ -288,6 +301,19 @@ export const data = {
             "AGR2024"
           ],
           time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Fertilidade, Manejo e Conservação dos Solos",
+          size: 2,
+          teachers: [
+            "Elias Franco"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGR2024"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
