--- a/docs/turma/ago/ago2024.mdx
+++ b/docs/turma/ago/ago2024.mdx
@@ -81,7 +81,7 @@ export const data = {
           teachers: [
             "Octavio Henrique Viana"
           ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
+          classroom: "Laboratório de Informatica C",
           students: [
             "AGO2024 - Grupo A"
           ],
@@ -94,7 +94,7 @@ export const data = {
           teachers: [
             "Samuel Stephan Milczuk"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica B",
           students: [
             "AGO2024 - Grupo B"
           ],
@@ -177,10 +177,10 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Agroecologia e DRS",
+          subject: "Geografia I",
           size: 2,
           teachers: [
-            "Tatiane Martinazzo Portz"
+            "Jhones Donizetti Mendes"
           ],
           classroom: "Sala 7-2",
           students: [
@@ -203,10 +203,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Geografia I",
+          subject: "Agroecologia e DRS",
           size: 2,
           teachers: [
-            "Jhones Donizetti Mendes"
+            "Tatiane Martinazzo Portz"
           ],
           classroom: "Sala 7-2",
           students: [
@@ -221,12 +221,12 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Educação Física I",
+          subject: "Zootecnia Geral",
           size: 2,
           teachers: [
-            "Kleber Augusto Michalichem"
+            "Leiliane Cristine de Souza"
           ],
-          classroom: "Educação Física / Sala 1 B2",
+          classroom: "Sala 7-2",
           students: [
             "AGO2024"
           ],
@@ -247,12 +247,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Zootecnia Geral",
+          subject: "Educação Física I",
           size: 2,
           teachers: [
-            "Leiliane Cristine de Souza"
+            "Kleber Augusto Michalichem"
           ],
-          classroom: "Sala 7-2",
+          classroom: "Educação Física / Sala 1 B2",
           students: [
             "AGO2024"
           ],
