--- a/docs/turma/agr/agr2024.mdx
+++ b/docs/turma/agr/agr2024.mdx
@@ -61,7 +61,7 @@ export const data = {
       dayClasses: [
         {
           subject: "Culturas I",
-          size: 4,
+          size: 2,
           teachers: [
             "Sônia Maria Mandotti"
           ],
@@ -70,6 +70,19 @@ export const data = {
             "AGR2024"
           ],
           time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Culturas I",
+          size: 2,
+          teachers: [
+            "Sônia Maria Mandotti"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGR2024"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
@@ -97,7 +110,7 @@ export const data = {
       dayClasses: [
         {
           subject: "Fertilidade, Manejo e Conservação dos Solos",
-          size: 4,
+          size: 2,
           teachers: [
             "Elias Franco"
           ],
@@ -106,6 +119,19 @@ export const data = {
             "AGR2024"
           ],
           time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Fertilidade, Manejo e Conservação dos Solos",
+          size: 2,
+          teachers: [
+            "Elias Franco"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGR2024"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
