--- a/docs/turma/ein/ein2022.mdx
+++ b/docs/turma/ein/ein2022.mdx
@@ -11,12 +11,12 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Matemática 3",
+          subject: "Processos de Fabricação 2",
           size: 2,
           teachers: [
-            "Sérgio Augusto Dias Castro"
+            "Fábio Fernandes da Silva"
           ],
-          classroom: "Sala 12-2",
+          classroom: "Laboratório de Usinagem B4",
           students: [
             "EIN2022"
           ],
@@ -55,10 +55,10 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Segurança do Trabalho",
-          size: 1,
+          subject: "Matemática 3",
+          size: 2,
           teachers: [
-            "Danilo Hungaro Micheletti"
+            "Sérgio Augusto Dias Castro"
           ],
           classroom: "Sala 12-2",
           students: [
@@ -68,16 +68,16 @@ export const data = {
           color: ""
         },
         {
-          subject: "Processos de Fabricação 2",
-          size: 2,
+          subject: "Química 3",
+          size: 1,
           teachers: [
-            "Fábio Fernandes da Silva"
+            "Sabrina Kerkhoff"
           ],
-          classroom: "Laboratório de Usinagem B4",
+          classroom: "Laboratório de Química",
           students: [
             "EIN2022"
           ],
-          time: "08:20 - 09:10",
+          time: "09:25 - 10:15",
           color: ""
         },
         {
@@ -99,10 +99,10 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "História 3",
+          subject: "Lingua Estrangeira Moderna 2 - Ingles",
           size: 1,
           teachers: [
-            "Suzane Conceição Pantolfi Tostes"
+            "Yohana Diel Saheli"
           ],
           classroom: "Sala 12-2",
           students: [
@@ -125,10 +125,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Lingua Estrangeira Moderna 2 - Ingles",
+          subject: "História 3",
           size: 1,
           teachers: [
-            "Yohana Diel Saheli"
+            "Suzane Conceição Pantolfi Tostes"
           ],
           classroom: "Sala 12-2",
           students: [
@@ -156,29 +156,16 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Projetos e Instalações Elétricas",
-          size: 2,
+          subject: "Máquinas e Acionamentos",
+          size: 3,
           teachers: [
-            "Danilo Hungaro Micheletti"
+            "Wylliam Salviano Gongora"
           ],
-          classroom: "Laboratório de Informatica C",
+          classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
           students: [
             "EIN2022"
           ],
           time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Química 3",
-          size: 1,
-          teachers: [
-            "Sabrina Kerkhoff"
-          ],
-          classroom: "Laboratório de Química",
-          students: [
-            "EIN2022"
-          ],
-          time: "09:25 - 10:15",
           color: ""
         },
         {
@@ -226,16 +213,29 @@ export const data = {
           color: ""
         },
         {
-          subject: "Máquinas e Acionamentos",
-          size: 3,
+          subject: "Segurança do Trabalho",
+          size: 1,
           teachers: [
-            "Wylliam Salviano Gongora"
+            "Danilo Hungaro Micheletti"
           ],
-          classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
+          classroom: "Sala 12-2",
           students: [
             "EIN2022"
           ],
           time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Projetos e Instalações Elétricas",
+          size: 2,
+          teachers: [
+            "Danilo Hungaro Micheletti"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "EIN2022"
+          ],
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
