--- a/docs/turma/elm/elm2024.mdx
+++ b/docs/turma/elm/elm2024.mdx
@@ -83,7 +83,7 @@ export const data = {
           subject: "Tecnologia dos Materiais",
           size: 4,
           teachers: [
-            "Sérgio Takahashi"
+            "Luiz Inácio Chaves"
           ],
           classroom: "Sala 13-2",
           students: [
