--- a/docs/professor/alexandre_rodrigues_monge.mdx
+++ b/docs/professor/alexandre_rodrigues_monge.mdx
@@ -29,24 +29,6 @@ export const data = {
           color: ""
         },
         {
-          subject: "Projeto integrador I",
-          size: 2,
-          teachers: [
-            "Alexandre Rodrigues Monge"
-          ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
-          students: [
-            "IIW2024B"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
           subject: "Projeto Integrador III",
           size: 2,
           teachers: [
@@ -55,6 +37,24 @@ export const data = {
           classroom: "Laboratório de Computação Aplicada",
           students: [
             "IIW2022A"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
+          subject: "Projeto integrador I",
+          size: 2,
+          teachers: [
+            "Alexandre Rodrigues Monge"
+          ],
+          classroom: "Laboratório de Informatica A - CR Toledo",
+          students: [
+            "IIW2024B"
           ],
           time: "07:30 - 08:20",
           color: ""
@@ -65,7 +65,7 @@ export const data = {
           teachers: [
             "Alexandre Rodrigues Monge"
           ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
+          classroom: "Sala 02 - CR Toledo",
           students: [
             "IIW2023B"
           ],
