--- a/docs/professor/danilo_hungaro_micheletti.mdx
+++ b/docs/professor/danilo_hungaro_micheletti.mdx
@@ -6,38 +6,11 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: [
-        {
-          subject: "Energias alternativas (PPC2020)",
-          size: 4,
-          teachers: [
-            "Danilo Hungaro Micheletti"
-          ],
-          classroom: "Laboratório de Informatica C",
-          students: [
-            "ELE2023"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Terça-Feira",
       dayClasses: [
-        {
-          subject: "Segurança do Trabalho",
-          size: 1,
-          teachers: [
-            "Danilo Hungaro Micheletti"
-          ],
-          classroom: "Sala 12-2",
-          students: [
-            "EIN2022"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
         {
           subject: "Manutenção Elétrica Industrial (PPC 2010)",
           size: 2,
@@ -55,29 +28,55 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Energias alternativas (PPC2020)",
+          size: 4,
+          teachers: [
+            "Danilo Hungaro Micheletti"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "ELE2023"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Sexta-Feira",
       dayClasses: [
+        {
+          subject: "Segurança do Trabalho",
+          size: 1,
+          teachers: [
+            "Danilo Hungaro Micheletti"
+          ],
+          classroom: "Sala 12-2",
+          students: [
+            "EIN2022"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
         {
           subject: "Projetos e Instalações Elétricas",
           size: 2,
           teachers: [
             "Danilo Hungaro Micheletti"
           ],
-          classroom: "Laboratório de Informatica C",
+          classroom: "Laboratório de Computação Aplicada",
           students: [
             "EIN2022"
           ],
-          time: "07:30 - 08:20",
+          time: "10:15 - 11:05",
           color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
+        },
         {
           subject: "Projetos Elétricos Industriais",
           size: 4,
