--- a/docs/professor/eliana_pelicon_pereira_figueira.mdx
+++ b/docs/professor/eliana_pelicon_pereira_figueira.mdx
@@ -67,21 +67,7 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Biologia II",
-          size: 2,
-          teachers: [
-            "Eliana Peliçon Pereira Figueira"
-          ],
-          classroom: "Sala 02 - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
