--- a/docs/professor/elias_franco.mdx
+++ b/docs/professor/elias_franco.mdx
@@ -12,19 +12,6 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Sistemas Agroflorestais",
-          size: 2,
-          teachers: [
-            "Elias Franco"
-          ],
-          classroom: "Sala 6-2",
-          students: [
-            "AGO2023"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        },
-        {
           subject: "Extensão e Comunicação Rural",
           size: 2,
           teachers: [
@@ -41,7 +28,21 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Sistemas Agroflorestais",
+          size: 2,
+          teachers: [
+            "Elias Franco"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
@@ -79,7 +80,7 @@ export const data = {
         },
         {
           subject: "Fertilidade, Manejo e Conservação dos Solos",
-          size: 4,
+          size: 2,
           teachers: [
             "Elias Franco"
           ],
@@ -88,6 +89,19 @@ export const data = {
             "AGR2024"
           ],
           time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Fertilidade, Manejo e Conservação dos Solos",
+          size: 2,
+          teachers: [
+            "Elias Franco"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGR2024"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
