--- a/docs/professor/humberto_fioravante_ferro.mdx
+++ b/docs/professor/humberto_fioravante_ferro.mdx
@@ -8,20 +8,6 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Linguagens de apresentação e estruturação de conteúdos",
-          size: 2,
-          teachers: [
-            "Humberto Fioravante Ferro",
-            "Luis Henrique Manosso Von Mecheln"
-          ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
-          students: [
-            "IIW2024B"
-          ],
-          time: "08:20 - 09:10",
-          color: ""
-        },
-        {
           subject: "Sistemas Gerenciadores de Conteúdo WEB",
           size: 2,
           teachers: [
@@ -31,7 +17,7 @@ export const data = {
           students: [
             "IIW2022B"
           ],
-          time: "10:15 - 11:05",
+          time: "08:20 - 09:10",
           color: ""
         },
         {
@@ -56,7 +42,22 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Linguagens de apresentação e estruturação de conteúdos",
+          size: 2,
+          teachers: [
+            "Humberto Fioravante Ferro",
+            "Luis Henrique Manosso Von Mecheln"
+          ],
+          classroom: "Laboratório de Informatica A - CR Toledo",
+          students: [
+            "IIW2024B"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
@@ -72,7 +73,7 @@ export const data = {
           students: [
             "IIW2024B"
           ],
-          time: "07:30 - 08:20",
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
