--- a/docs/professor/josiane_paula_maltauro.mdx
+++ b/docs/professor/josiane_paula_maltauro.mdx
@@ -21,14 +21,14 @@ export const data = {
           color: ""
         },
         {
-          subject: "Artes II",
+          subject: "Artes 1",
           size: 1,
           teachers: [
             "Josiane Paula Maltauro"
           ],
-          classroom: "Sala 6-2",
+          classroom: "Sala 14-2",
           students: [
-            "AGO2023"
+            "EIN2024"
           ],
           time: "09:25 - 10:15",
           color: ""
@@ -47,6 +47,19 @@ export const data = {
           color: ""
         },
         {
+          subject: "Arte I",
+          size: 2,
+          teachers: [
+            "Josiane Paula Maltauro"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "13:10 - 14:00",
+          color: ""
+        },
+        {
           subject: "Cultura e Cinema Nacional II",
           size: 1,
           teachers: [
@@ -56,7 +69,7 @@ export const data = {
           students: [
             "AGO2023"
           ],
-          time: "13:10 - 14:00",
+          time: "15:05 - 15:55",
           color: ""
         },
         {
@@ -69,7 +82,7 @@ export const data = {
           students: [
             "AGO2022"
           ],
-          time: "15:05 - 15:55",
+          time: "16:45 - 17:35",
           color: ""
         }
       ]
@@ -104,19 +117,6 @@ export const data = {
           color: ""
         },
         {
-          subject: "Arte I",
-          size: 2,
-          teachers: [
-            "Josiane Paula Maltauro"
-          ],
-          classroom: "Sala 15-2",
-          students: [
-            "IIW2023A"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        },
-        {
           subject: "Cultura e Cinema Nacional I",
           size: 1,
           teachers: [
@@ -144,28 +144,27 @@ export const data = {
           students: [
             "IIW2023B"
           ],
-          time: "07:30 - 08:20",
+          time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Artes II",
+          size: 1,
+          teachers: [
+            "Josiane Paula Maltauro"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "14:00 - 14:50",
           color: ""
         }
       ]
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Artes 1",
-          size: 1,
-          teachers: [
-            "Josiane Paula Maltauro"
-          ],
-          classroom: "Sala 14-2",
-          students: [
-            "EIN2024"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
