--- a/docs/professor/kleber_augusto_michalichem.mdx
+++ b/docs/professor/kleber_augusto_michalichem.mdx
@@ -21,19 +21,6 @@ export const data = {
           color: ""
         },
         {
-          subject: "Educação Física 1",
-          size: 1,
-          teachers: [
-            "Kleber Augusto Michalichem"
-          ],
-          classroom: "Educação Física / Sala 1 B2",
-          students: [
-            "EIN2024"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        },
-        {
           subject: "Educação Física II",
           size: 2,
           teachers: [
@@ -57,19 +44,6 @@ export const data = {
             "COM2023"
           ],
           time: "13:10 - 14:00",
-          color: ""
-        },
-        {
-          subject: "Educação Física I",
-          size: 2,
-          teachers: [
-            "Kleber Augusto Michalichem"
-          ],
-          classroom: "Educação Física / Sala 1 B2",
-          students: [
-            "IIW2024A"
-          ],
-          time: "15:05 - 15:55",
           color: ""
         }
       ]
@@ -107,10 +81,6 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Quinta-Feira",
       dayClasses: [
         {
           subject: "Educação Física I",
@@ -120,11 +90,29 @@ export const data = {
           ],
           classroom: "Educação Física / Sala 1 B2",
           students: [
-            "AGO2024"
+            "IIW2024A"
           ],
           time: "07:30 - 08:20",
           color: ""
         },
+        {
+          subject: "Educação Física III",
+          size: 2,
+          teachers: [
+            "Kleber Augusto Michalichem"
+          ],
+          classroom: "Educação Física / Sala 1 B2",
+          students: [
+            "AGO2022"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
         {
           subject: "Educação Física I",
           size: 1,
@@ -135,7 +123,33 @@ export const data = {
           students: [
             "COM2024"
           ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Educação Física 1",
+          size: 1,
+          teachers: [
+            "Kleber Augusto Michalichem"
+          ],
+          classroom: "Educação Física / Sala 1 B2",
+          students: [
+            "EIN2024"
+          ],
           time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Educação Física I",
+          size: 2,
+          teachers: [
+            "Kleber Augusto Michalichem"
+          ],
+          classroom: "Educação Física / Sala 1 B2",
+          students: [
+            "AGO2024"
+          ],
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
@@ -193,19 +207,6 @@ export const data = {
             "AGO2023"
           ],
           time: "10:15 - 11:05",
-          color: ""
-        },
-        {
-          subject: "Educação Física III",
-          size: 2,
-          teachers: [
-            "Kleber Augusto Michalichem"
-          ],
-          classroom: "Educação Física / Sala 1 B2",
-          students: [
-            "AGO2022"
-          ],
-          time: "15:05 - 15:55",
           color: ""
         }
       ]
