--- a/docs/professor/luiz_inacio_chaves.mdx
+++ b/docs/professor/luiz_inacio_chaves.mdx
@@ -84,7 +84,21 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Tecnologia dos Materiais",
+          size: 4,
+          teachers: [
+            "Luiz Inácio Chaves"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "ELM2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Sexta-Feira",
