--- a/docs/professor/sabrina_kerkhoff.mdx
+++ b/docs/professor/sabrina_kerkhoff.mdx
@@ -6,21 +6,7 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: [
-        {
-          subject: "Química II",
-          size: 2,
-          teachers: [
-            "Sabrina Kerkhoff"
-          ],
-          classroom: "Sala 15-2",
-          students: [
-            "IIW2023A"
-          ],
-          time: "13:10 - 14:00",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Terça-Feira",
@@ -49,6 +35,19 @@ export const data = {
             "EIN2024 - Grupo B"
           ],
           time: "08:20 - 09:10",
+          color: ""
+        },
+        {
+          subject: "Química 3",
+          size: 1,
+          teachers: [
+            "Sabrina Kerkhoff"
+          ],
+          classroom: "Laboratório de Química",
+          students: [
+            "EIN2022"
+          ],
+          time: "09:25 - 10:15",
           color: ""
         },
         {
@@ -101,16 +100,16 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Química 3",
-          size: 1,
+          subject: "Química II",
+          size: 2,
           teachers: [
             "Sabrina Kerkhoff"
           ],
-          classroom: "Laboratório de Química",
+          classroom: "Sala 15-2",
           students: [
-            "EIN2022"
+            "IIW2023A"
           ],
-          time: "09:25 - 10:15",
+          time: "07:30 - 08:20",
           color: ""
         },
         {
