--- a/docs/professor/samuel_stephan_milczuk.mdx
+++ b/docs/professor/samuel_stephan_milczuk.mdx
@@ -40,7 +40,7 @@ export const data = {
           teachers: [
             "Samuel Stephan Milczuk"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica B",
           students: [
             "AGO2024 - Grupo B"
           ],
@@ -65,6 +65,19 @@ export const data = {
           ],
           time: "07:30 - 08:20",
           color: ""
+        },
+        {
+          subject: "Desenvolvimento WEB Orientado a Objetos",
+          size: 2,
+          teachers: [
+            "Samuel Stephan Milczuk"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2023A"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
         }
       ]
     },
@@ -82,19 +95,6 @@ export const data = {
             "IIW2022A"
           ],
           time: "08:20 - 09:10",
-          color: ""
-        },
-        {
-          subject: "Desenvolvimento WEB Orientado a Objetos",
-          size: 2,
-          teachers: [
-            "Samuel Stephan Milczuk"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: [
-            "IIW2023A"
-          ],
-          time: "10:15 - 11:05",
           color: ""
         },
         {
