--- a/docs/professor/sergio_augusto_dias_castro.mdx
+++ b/docs/professor/sergio_augusto_dias_castro.mdx
@@ -6,6 +6,10 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Terça-Feira",
       dayClasses: [
         {
           subject: "Matemática 3",
@@ -19,12 +23,7 @@ export const data = {
           ],
           time: "07:30 - 08:20",
           color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: [
+        },
         {
           subject: "Matemática III",
           size: 2,
