--- a/docs/professor/sergio_takahashi.mdx
+++ b/docs/professor/sergio_takahashi.mdx
@@ -73,21 +73,7 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Tecnologia dos Materiais",
-          size: 4,
-          teachers: [
-            "Sérgio Takahashi"
-          ],
-          classroom: "Sala 13-2",
-          students: [
-            "ELM2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
