--- a/docs/professor/talita_bortolini.mdx
+++ b/docs/professor/talita_bortolini.mdx
@@ -8,14 +8,14 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Língua Portuguesa e Literatura II",
+          subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
             "Talita Bortolini"
           ],
-          classroom: "Sala 02 - CR Toledo",
+          classroom: "Sala 01 - CR Toledo",
           students: [
-            "IIW2023B"
+            "IIW2024B"
           ],
           time: "10:15 - 11:05",
           color: ""
@@ -39,14 +39,14 @@ export const data = {
           color: ""
         },
         {
-          subject: "Língua Portuguesa e Literatura III",
+          subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
             "Talita Bortolini"
           ],
-          classroom: "Sala 03 - CR Toledo",
+          classroom: "Sala 02 - CR Toledo",
           students: [
-            "IIW2022B"
+            "IIW2023B"
           ],
           time: "15:05 - 15:55",
           color: ""
@@ -59,21 +59,7 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Língua Portuguesa e Literatura I",
-          size: 2,
-          teachers: [
-            "Talita Bortolini"
-          ],
-          classroom: "Sala 01 - CR Toledo",
-          students: [
-            "IIW2024B"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
@@ -89,6 +75,19 @@ export const data = {
             "IIW2023B"
           ],
           time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Língua Portuguesa e Literatura III",
+          size: 2,
+          teachers: [
+            "Talita Bortolini"
+          ],
+          classroom: "Sala 03 - CR Toledo",
+          students: [
+            "IIW2022B"
+          ],
+          time: "09:25 - 10:15",
           color: ""
         },
         {
