--- a/docs/professor/wylliam_salviano_gongora.mdx
+++ b/docs/professor/wylliam_salviano_gongora.mdx
@@ -33,10 +33,6 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Sexta-Feira",
       dayClasses: [
         {
           subject: "Máquinas e Acionamentos",
@@ -48,9 +44,14 @@ export const data = {
           students: [
             "EIN2022"
           ],
-          time: "09:25 - 10:15",
+          time: "07:30 - 08:20",
           color: ""
-        },
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
         {
           subject: "Acionamentos Elétricos (PPC2020)",
           size: 4,
