--- a/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
@@ -11,6 +11,19 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
+          subject: "Projeto Integrador II",
+          size: 2,
+          teachers: [
+            "Caroline Domingues Porto do Nascimento Barbieri"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "IIW2023A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "Serviços em nuvem",
           size: 2,
           teachers: [
@@ -21,19 +34,6 @@ export const data = {
             "IIW2022A"
           ],
           time: "10:15 - 11:05",
-          color: ""
-        },
-        {
-          subject: "Projeto Integrador II",
-          size: 2,
-          teachers: [
-            "Caroline Domingues Porto do Nascimento Barbieri"
-          ],
-          classroom: "Laboratório de Computação Aplicada",
-          students: [
-            "IIW2023A"
-          ],
-          time: "15:05 - 15:55",
           color: ""
         },
         {
@@ -125,6 +125,19 @@ export const data = {
           color: ""
         },
         {
+          subject: "Projeto Integrador III",
+          size: 2,
+          teachers: [
+            "Alexandre Rodrigues Monge"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "IIW2022A"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
+        {
           subject: "Desenho Assistido por computador",
           size: 2,
           teachers: [
@@ -143,19 +156,6 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Projeto Integrador III",
-          size: 2,
-          teachers: [
-            "Alexandre Rodrigues Monge"
-          ],
-          classroom: "Laboratório de Computação Aplicada",
-          students: [
-            "IIW2022A"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
           subject: "Projetos Elétricos Residenciais e Prediais",
           size: 4,
           teachers: [
@@ -173,6 +173,19 @@ export const data = {
     {
       dayName: "Sexta-Feira",
       dayClasses: [
+        {
+          subject: "Projetos e Instalações Elétricas",
+          size: 2,
+          teachers: [
+            "Danilo Hungaro Micheletti"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "EIN2022"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
         {
           subject: "Projetos Elétricos Industriais",
           size: 4,
