--- a/docs/sala/bloco_2/laboratorio_de_informatica_c.mdx
+++ b/docs/sala/bloco_2/laboratorio_de_informatica_c.mdx
@@ -24,16 +24,16 @@ export const data = {
           color: ""
         },
         {
-          subject: "Energias alternativas (PPC2020)",
-          size: 4,
+          subject: "Desenho técnico e topografia",
+          size: 2,
           teachers: [
-            "Danilo Hungaro Micheletti"
+            "Octavio Henrique Viana"
           ],
           classroom: "Laboratório de Informatica C",
           students: [
-            "ELE2023"
+            "AGO2024 - Grupo A"
           ],
-          time: "19:00 - 19:50",
+          time: "15:05 - 15:55",
           color: ""
         }
       ]
@@ -103,19 +103,6 @@ export const data = {
     {
       dayName: "Quinta-Feira",
       dayClasses: [
-        {
-          subject: "Projetos e Instalações Elétricas",
-          size: 2,
-          teachers: [
-            "Danilo Hungaro Micheletti"
-          ],
-          classroom: "Laboratório de Informatica C",
-          students: [
-            "EIN2022"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
         {
           subject: "PCCC 4 - Tecnologia da informação e comunicação na educação",
           size: 3,
