--- a/docs/sala/bloco_2/sala_11-2.mdx
+++ b/docs/sala/bloco_2/sala_11-2.mdx
@@ -136,6 +136,19 @@ export const data = {
           ],
           time: "10:15 - 11:05",
           color: ""
+        },
+        {
+          subject: "Energias alternativas (PPC2020)",
+          size: 4,
+          teachers: [
+            "Danilo Hungaro Micheletti"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "ELE2023"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
         }
       ]
     },
