--- a/docs/sala/bloco_4/laboratorio_de_maquinas_e_acionamentos_eletricos_b4.mdx
+++ b/docs/sala/bloco_4/laboratorio_de_maquinas_e_acionamentos_eletricos_b4.mdx
@@ -9,10 +9,6 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Terça-Feira",
       dayClasses: [
         {
           subject: "Circuitos Hidráulicos e Pneumáticos",
@@ -30,15 +26,15 @@ export const data = {
       ]
     },
     {
+      dayName: "Terça-Feira",
+      dayClasses: []
+    },
+    {
       dayName: "Quarta-Feira",
       dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Sexta-Feira",
       dayClasses: [
         {
           subject: "Máquinas e Acionamentos",
@@ -50,9 +46,14 @@ export const data = {
           students: [
             "EIN2022"
           ],
-          time: "09:25 - 10:15",
+          time: "07:30 - 08:20",
           color: ""
-        },
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
         {
           subject: "Acionamentos Elétricos (PPC2020)",
           size: 4,
