--- a/docs/sala/bloco_cr_ifpr-biopark/sala_02_-_cr_toledo.mdx
+++ b/docs/sala/bloco_cr_ifpr-biopark/sala_02_-_cr_toledo.mdx
@@ -50,19 +50,6 @@ export const data = {
           color: ""
         },
         {
-          subject: "Língua Portuguesa e Literatura II",
-          size: 2,
-          teachers: [
-            "Talita Bortolini"
-          ],
-          classroom: "Sala 02 - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        },
-        {
           subject: "Física II",
           size: 2,
           teachers: [
@@ -106,6 +93,19 @@ export const data = {
           ],
           time: "10:15 - 11:05",
           color: ""
+        },
+        {
+          subject: "Língua Portuguesa e Literatura II",
+          size: 2,
+          teachers: [
+            "Talita Bortolini"
+          ],
+          classroom: "Sala 02 - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "15:05 - 15:55",
+          color: ""
         }
       ]
     },
@@ -113,10 +113,10 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Arte I",
+          subject: "Química II",
           size: 2,
           teachers: [
-            "Josiane Paula Maltauro"
+            "Cosme Oliveira da Silva"
           ],
           classroom: "Sala 02 - CR Toledo",
           students: [
@@ -139,10 +139,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Biologia II",
+          subject: "Arte I",
           size: 2,
           teachers: [
-            "Eliana Peliçon Pereira Figueira"
+            "Josiane Paula Maltauro"
           ],
           classroom: "Sala 02 - CR Toledo",
           students: [
@@ -157,16 +157,29 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Química II",
+          subject: "Biologia II",
           size: 2,
           teachers: [
-            "Cosme Oliveira da Silva"
+            "Leandro Luiz Borges"
           ],
           classroom: "Sala 02 - CR Toledo",
           students: [
             "IIW2023B"
           ],
           time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Projeto Integrador II",
+          size: 2,
+          teachers: [
+            "Alexandre Rodrigues Monge"
+          ],
+          classroom: "Sala 02 - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "09:25 - 10:15",
           color: ""
         },
         {
