--- a/docs/turma/ele/ele2023.mdx
+++ b/docs/turma/ele/ele2023.mdx
@@ -11,12 +11,12 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Energias alternativas (PPC2020)",
+          subject: "Elementos de automação (PPC2020)",
           size: 4,
           teachers: [
-            "Danilo Hungaro Micheletti"
+            "Jair Fajardo Junior"
           ],
-          classroom: "Laboratório de Informatica C",
+          classroom: "Laboratório de Automação e Robótica Industrial",
           students: [
             "ELE2023"
           ],
@@ -60,12 +60,12 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Elementos de automação (PPC2020)",
+          subject: "Energias alternativas (PPC2020)",
           size: 4,
           teachers: [
-            "Jair Fajardo Junior"
+            "Danilo Hungaro Micheletti"
           ],
-          classroom: "Laboratório de Automação e Robótica Industrial",
+          classroom: "Sala 11-2",
           students: [
             "ELE2023"
           ],
