--- a/docs/turma/iiw/iiw2023b.mdx
+++ b/docs/turma/iiw/iiw2023b.mdx
@@ -50,12 +50,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Língua Portuguesa e Literatura II",
+          subject: "Desenvolvimento WEB Orientado a Objetos",
           size: 2,
           teachers: [
-            "Talita Bortolini"
+            "Rafael Luis Bartz"
           ],
-          classroom: "Sala 02 - CR Toledo",
+          classroom: "Laboratório de Informatica A - CR Toledo",
           students: [
             "IIW2023B"
           ],
@@ -121,10 +121,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Desenvolvimento WEB Orientado a Objetos",
+          subject: "Administração de Sistemas Operacionais e Redes",
           size: 2,
           teachers: [
-            "Rafael Luis Bartz"
+            "Sergio Ricardo Ferrazoli"
           ],
           classroom: "Laboratório de Informatica A - CR Toledo",
           students: [
@@ -134,12 +134,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Administração de Sistemas Operacionais e Redes",
+          subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
-            "Sergio Ricardo Ferrazoli"
+            "Talita Bortolini"
           ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
+          classroom: "Sala 02 - CR Toledo",
           students: [
             "IIW2023B"
           ],
@@ -152,10 +152,10 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Arte I",
+          subject: "Química II",
           size: 2,
           teachers: [
-            "Josiane Paula Maltauro"
+            "Cosme Oliveira da Silva"
           ],
           classroom: "Sala 02 - CR Toledo",
           students: [
@@ -178,10 +178,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Biologia II",
+          subject: "Arte I",
           size: 2,
           teachers: [
-            "Eliana Peliçon Pereira Figueira"
+            "Josiane Paula Maltauro"
           ],
           classroom: "Sala 02 - CR Toledo",
           students: [
@@ -196,10 +196,10 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Química II",
+          subject: "Biologia II",
           size: 2,
           teachers: [
-            "Cosme Oliveira da Silva"
+            "Leandro Luiz Borges"
           ],
           classroom: "Sala 02 - CR Toledo",
           students: [
@@ -214,7 +214,7 @@ export const data = {
           teachers: [
             "Alexandre Rodrigues Monge"
           ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
+          classroom: "Sala 02 - CR Toledo",
           students: [
             "IIW2023B"
           ],
