--- a/docs/professor/haroldo_yutaka_misunaga.mdx
+++ b/docs/professor/haroldo_yutaka_misunaga.mdx
@@ -91,7 +91,7 @@ export const data = {
           teachers: [
             "Haroldo Yutaka Misunaga"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Sala 3-1",
           students: [
             "TGC2024"
           ],
