--- a/docs/professor/lechan_colares_santos.mdx
+++ b/docs/professor/lechan_colares_santos.mdx
@@ -39,7 +39,7 @@ export const data = {
           teachers: [
             "Lechan Colares Santos"
           ],
-          classroom: "Sala 14-2",
+          classroom: "Laboratório de Informatica A",
           students: [
             "TGC2023"
           ],
@@ -105,7 +105,7 @@ export const data = {
           teachers: [
             "Lechan Colares Santos"
           ],
-          classroom: "Sala 14-2",
+          classroom: "Laboratório de Informatica A",
           students: [
             "TGC2023"
           ],
