--- a/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
@@ -77,14 +77,14 @@ export const data = {
           color: ""
         },
         {
-          subject: "Gestão da informação, comunicação e documentação",
+          subject: "Logistica Aplicada",
           size: 2,
           teachers: [
-            "Keyla Christina Almeida Portela"
+            "Lechan Colares Santos"
           ],
           classroom: "Laboratório de Informatica A",
           students: [
-            "TGC2024"
+            "TGC2023"
           ],
           time: "21:00 - 21:50",
           color: ""
@@ -236,14 +236,14 @@ export const data = {
           color: ""
         },
         {
-          subject: "Análise Econômica de Mercado",
+          subject: "Logistica Aplicada",
           size: 2,
           teachers: [
-            "Haroldo Yutaka Misunaga"
+            "Lechan Colares Santos"
           ],
           classroom: "Laboratório de Informatica A",
           students: [
-            "TGC2024"
+            "TGC2023"
           ],
           time: "21:00 - 21:50",
           color: ""
