--- a/docs/sala/bloco_1/sala_3-1.mdx
+++ b/docs/sala/bloco_1/sala_3-1.mdx
@@ -140,6 +140,19 @@ export const data = {
           ],
           time: "09:25 - 10:15",
           color: ""
+        },
+        {
+          subject: "Análise Econômica de Mercado",
+          size: 2,
+          teachers: [
+            "Haroldo Yutaka Misunaga"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "TGC2024"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
         }
       ]
     },
