--- a/docs/turma/tgc/tgc2024.mdx
+++ b/docs/turma/tgc/tgc2024.mdx
@@ -29,7 +29,7 @@ export const data = {
           teachers: [
             "Keyla Christina Almeida Portela"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica C",
           students: [
             "TGC2024"
           ],
@@ -122,7 +122,7 @@ export const data = {
           teachers: [
             "Haroldo Yutaka Misunaga"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Sala 3-1",
           students: [
             "TGC2024"
           ],
