--- a/docs/professor/keyla_christina_almeida_portela.mdx
+++ b/docs/professor/keyla_christina_almeida_portela.mdx
@@ -26,7 +26,7 @@ export const data = {
           teachers: [
             "Keyla Christina Almeida Portela"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica C",
           students: [
             "TGC2024"
           ],
