--- a/docs/sala/bloco_2/laboratorio_de_informatica_c.mdx
+++ b/docs/sala/bloco_2/laboratorio_de_informatica_c.mdx
@@ -35,6 +35,19 @@ export const data = {
           ],
           time: "15:05 - 15:55",
           color: ""
+        },
+        {
+          subject: "Gestão da informação, comunicação e documentação",
+          size: 2,
+          teachers: [
+            "Keyla Christina Almeida Portela"
+          ],
+          classroom: "Laboratório de Informatica C",
+          students: [
+            "TGC2024"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
         }
       ]
     },
