--- a/docs/turma/tgc/tgc2023.mdx
+++ b/docs/turma/tgc/tgc2023.mdx
@@ -29,7 +29,7 @@ export const data = {
           teachers: [
             "Lechan Colares Santos"
           ],
-          classroom: "Sala 14-2",
+          classroom: "Laboratório de Informatica A",
           students: [
             "TGC2023"
           ],
@@ -122,7 +122,7 @@ export const data = {
           teachers: [
             "Lechan Colares Santos"
           ],
-          classroom: "Sala 14-2",
+          classroom: "Laboratório de Informatica A",
           students: [
             "TGC2023"
           ],
