--- a/docs/professor/karina_dias_espartosa.mdx
+++ b/docs/professor/karina_dias_espartosa.mdx
@@ -6,21 +6,7 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: [
-        {
-          subject: "Zoologia dos invertebrados I",
-          size: 4,
-          teachers: [
-            "Karina Dias Espartosa"
-          ],
-          classroom: "Sala 7-2",
-          students: [
-            "BIO_ESPECIAL_1"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Terça-Feira",
@@ -50,19 +36,6 @@ export const data = {
           ],
           time: "15:05 - 15:55",
           color: ""
-        },
-        {
-          subject: "Zoologia dos invertebrados II",
-          size: 4,
-          teachers: [
-            "Karina Dias Espartosa"
-          ],
-          classroom: "Sala 8-2",
-          students: [
-            "BIO_ESPECIAL_2"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
         }
       ]
     },
@@ -83,7 +56,7 @@ export const data = {
           color: ""
         },
         {
-          subject: "Zoologia dos invertebrados I",
+          subject: "Zoologia dos cordados I",
           size: 4,
           teachers: [
             "Karina Dias Espartosa"
@@ -99,21 +72,7 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Zoologia dos invertebrados II",
-          size: 4,
-          teachers: [
-            "Karina Dias Espartosa"
-          ],
-          classroom: "Sala 8-2",
-          students: [
-            "BIO_ESPECIAL_2"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
