--- a/docs/sala/bloco_2/sala_7-2.mdx
+++ b/docs/sala/bloco_2/sala_7-2.mdx
@@ -37,29 +37,16 @@ export const data = {
           color: ""
         },
         {
-          subject: "Geografia I",
+          subject: "Artes I",
           size: 2,
           teachers: [
-            "Jhones Donizetti Mendes"
+            "Josiane Paula Maltauro"
           ],
           classroom: "Sala 7-2",
           students: [
             "AGO2024"
           ],
           time: "10:15 - 11:05",
-          color: ""
-        },
-        {
-          subject: "Zoologia dos invertebrados I",
-          size: 4,
-          teachers: [
-            "Karina Dias Espartosa"
-          ],
-          classroom: "Sala 7-2",
-          students: [
-            "BIO_ESPECIAL_1"
-          ],
-          time: "19:00 - 19:50",
           color: ""
         }
       ]
@@ -138,7 +125,7 @@ export const data = {
           color: ""
         },
         {
-          subject: "Zoologia dos invertebrados I",
+          subject: "Zoologia dos cordados I",
           size: 4,
           teachers: [
             "Karina Dias Espartosa"
@@ -156,10 +143,10 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Zootecnia Geral",
+          subject: "Geografia I",
           size: 2,
           teachers: [
-            "Leiliane Cristine de Souza"
+            "Jhones Donizetti Mendes"
           ],
           classroom: "Sala 7-2",
           students: [
@@ -182,10 +169,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Artes I",
+          subject: "Zootecnia Geral",
           size: 2,
           teachers: [
-            "Josiane Paula Maltauro"
+            "Leiliane Cristine de Souza"
           ],
           classroom: "Sala 7-2",
           students: [
