--- a/docs/sala/bloco_2/sala_15-2.mdx
+++ b/docs/sala/bloco_2/sala_15-2.mdx
@@ -107,8 +107,21 @@ export const data = {
           color: ""
         },
         {
+          subject: "História II",
+          size: 1,
+          teachers: [
+            "Jael dos Santos"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "08:20 - 09:10",
+          color: ""
+        },
+        {
           subject: "Língua Portuguesa e Literatura II",
-          size: 2,
+          size: 1,
           teachers: [
             "Yohana Diel Saheli"
           ],
@@ -116,7 +129,7 @@ export const data = {
           students: [
             "IIW2023A"
           ],
-          time: "08:20 - 09:10",
+          time: "09:25 - 10:15",
           color: ""
         },
         {
@@ -247,10 +260,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "História II",
+          subject: "Língua Portuguesa e Literatura II",
           size: 1,
           teachers: [
-            "Jael dos Santos"
+            "Yohana Diel Saheli"
           ],
           classroom: "Sala 15-2",
           students: [
@@ -292,7 +305,7 @@ export const data = {
       dayClasses: [
         {
           subject: "Língua Portuguesa e Literatura II",
-          size: 2,
+          size: 1,
           teachers: [
             "Yohana Diel Saheli"
           ],
@@ -301,6 +314,19 @@ export const data = {
             "IIW2023A"
           ],
           time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Língua Portuguesa e Literatura II",
+          size: 1,
+          teachers: [
+            "Yohana Diel Saheli"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "08:20 - 09:10",
           color: ""
         },
         {
