--- a/docs/turma/iiw/iiw2023a.mdx
+++ b/docs/turma/iiw/iiw2023a.mdx
@@ -94,8 +94,21 @@ export const data = {
           color: ""
         },
         {
+          subject: "História II",
+          size: 1,
+          teachers: [
+            "Jael dos Santos"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "08:20 - 09:10",
+          color: ""
+        },
+        {
           subject: "Língua Portuguesa e Literatura II",
-          size: 2,
+          size: 1,
           teachers: [
             "Yohana Diel Saheli"
           ],
@@ -103,7 +116,7 @@ export const data = {
           students: [
             "IIW2023A"
           ],
-          time: "08:20 - 09:10",
+          time: "09:25 - 10:15",
           color: ""
         },
         {
@@ -208,10 +221,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "História II",
+          subject: "Língua Portuguesa e Literatura II",
           size: 1,
           teachers: [
-            "Jael dos Santos"
+            "Yohana Diel Saheli"
           ],
           classroom: "Sala 15-2",
           students: [
@@ -240,7 +253,7 @@ export const data = {
       dayClasses: [
         {
           subject: "Língua Portuguesa e Literatura II",
-          size: 2,
+          size: 1,
           teachers: [
             "Yohana Diel Saheli"
           ],
@@ -249,6 +262,19 @@ export const data = {
             "IIW2023A"
           ],
           time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Língua Portuguesa e Literatura II",
+          size: 1,
+          teachers: [
+            "Yohana Diel Saheli"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "08:20 - 09:10",
           color: ""
         },
         {
