--- a/docs/professor/jael_dos_santos.mdx
+++ b/docs/professor/jael_dos_santos.mdx
@@ -25,6 +25,19 @@ export const data = {
           color: ""
         },
         {
+          subject: "História II",
+          size: 1,
+          teachers: [
+            "Jael dos Santos"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "08:20 - 09:10",
+          color: ""
+        },
+        {
           subject: "História I",
           size: 1,
           teachers: [
@@ -72,21 +85,7 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "História II",
-          size: 1,
-          teachers: [
-            "Jael dos Santos"
-          ],
-          classroom: "Sala 15-2",
-          students: [
-            "IIW2023A"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
