--- a/docs/professor/yohana_diel_saheli.mdx
+++ b/docs/professor/yohana_diel_saheli.mdx
@@ -13,7 +13,7 @@ export const data = {
       dayClasses: [
         {
           subject: "Língua Portuguesa e Literatura II",
-          size: 2,
+          size: 1,
           teachers: [
             "Yohana Diel Saheli"
           ],
@@ -21,7 +21,7 @@ export const data = {
           students: [
             "IIW2023A"
           ],
-          time: "08:20 - 09:10",
+          time: "09:25 - 10:15",
           color: ""
         }
       ]
@@ -72,6 +72,19 @@ export const data = {
           ],
           time: "07:30 - 08:20",
           color: ""
+        },
+        {
+          subject: "Língua Portuguesa e Literatura II",
+          size: 1,
+          teachers: [
+            "Yohana Diel Saheli"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
         }
       ]
     },
@@ -80,7 +93,7 @@ export const data = {
       dayClasses: [
         {
           subject: "Língua Portuguesa e Literatura II",
-          size: 2,
+          size: 1,
           teachers: [
             "Yohana Diel Saheli"
           ],
@@ -89,6 +102,19 @@ export const data = {
             "IIW2023A"
           ],
           time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Língua Portuguesa e Literatura II",
+          size: 1,
+          teachers: [
+            "Yohana Diel Saheli"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "08:20 - 09:10",
           color: ""
         },
         {
